--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <h6>- Betty, founder&CEO</h6>
         </blockquote>
     </div>
+    <h2 class="display-3" style="text-align: center">Our Boots</h2>
     <div class="col-lg-4">
         BOOTS 1
         <div><button class="btn btn-primary btn-xs">Add to cart</button></div>
